# docker-web-hello-world

./: README.md  pyproject.toml
resources/: response.json
